2004-11-18  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (eprintf): New function.

2004-11-16  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (find_on_path): Clear show_error and/or print_failed
	parameters to display_error.
	(rva_to_offset): Ditto.
	(dll_info): Ditto.
	(track_down): Ditto.

2004-11-13  Pierre Humblet <pierre.humblet@ieee.org>

	* kill.cc (forcekill): Do not pass negative pids to 
	cygwin_internal. Check if sig == 0. Improve error messages.
	(main): Make pid a long long and distinguish between pids, gpids 
	(i.e. negative pids) and Win9x pids.

2004-11-11  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc: Change "keyeprint" to "display_error" throughout.

2004-11-11  Christopher Faylor  <cgf@timesys.com>

	* cygcheck.cc (main): Allow a '-l' without an additional argument.

2004-11-11  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (keyeprint): New optional parameters: show_error and
	print_failed.

2004-10-31  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (get_dword): Fix errormessage.
	(cygwin_info): Ditto.
	(track_down): Ditto.
	(check_keys): Ditto.

2004-10-27  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Warn about missing or multiple cygwin1
	dlls.

2004-10-25  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Add leading newline before legend for
	drive-list.

2004-10-22  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): In legend for drive-list: Add ``ram'' and
	``unk''.  Use single puts.  Add leading newline.  Line up equal-signs.

2004-10-20  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>

	* cygcheck.cc (dump_sysinfo): Allow for larger drives in drive-list.
	Change ``Used'' to ``Free'' in helptext-title for drive-list.

2004-10-18  Bas van Gompel  <cygwin-patch.buzz@bavag.tmfweb.nl>
